Produced starmask region and MOC files on Lockman-SWIRE.

--- a/dmu1/dmu1_ml_XMM-LSS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2_Merging.ipynb
@@ -1306,6 +1306,182 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "vista_origin = Table()\n",
+    "vista_origin.add_column(master_catalogue['help_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "vista_bands = ['y','j','h','k'] # Lowercase naming convention (k is Ks)\n",
+    "for band in vista_bands:\n",
+    "    print('For VISTA band ' + band + ':')\n",
+    "    # VISTA total flux \n",
+    "    has_video = ~np.isnan(master_catalogue['f_video_' + band])\n",
+    "    has_viking = ~np.isnan(master_catalogue['f_viking_' + band])\n",
+    "    has_vhs = ~np.isnan(master_catalogue['f_vhs_' + band])\n",
+    "    has_both = has_video & has_vhs\n",
+    "\n",
+    "    print(\"{} sources with VIDEO flux\".format(np.sum(has_video)))\n",
+    "    print(\"{} sources with VIKING flux\".format(np.sum(has_viking)))\n",
+    "    print(\"{} sources with VHS flux\".format(np.sum(has_vhs)))\n",
+    "    print(\"{} sources with VIDEO and VHS flux\".format(np.sum(has_both)))\n",
+    "\n",
+    "\n",
+    "    use_video = has_video \n",
+    "    use_viking = has_viking & ~has_video\n",
+    "    use_vhs = has_vhs & ~has_video & ~has_viking\n",
+    "\n",
+    "    print(\"{} sources for which we use VIDEO\".format(np.sum(use_video)))\n",
+    "    print(\"{} sources for which we use VHS\".format(np.sum(use_vhs)))\n",
+    "\n",
+    "    f_vista = np.full(len(master_catalogue), np.nan)\n",
+    "    f_vista[use_video] = master_catalogue['f_video_' + band][use_video]\n",
+    "    f_vista[use_vhs] = master_catalogue['f_vhs_' + band][use_vhs]\n",
+    "\n",
+    "    ferr_vista = np.full(len(master_catalogue), np.nan)\n",
+    "    ferr_vista[use_video] = master_catalogue['ferr_video_' + band][use_video]\n",
+    "    ferr_vista[use_vhs] = master_catalogue['ferr_vhs_' + band][use_vhs]\n",
+    "    \n",
+    "    m_vista = np.full(len(master_catalogue), np.nan)\n",
+    "    m_vista[use_video] = master_catalogue['m_video_' + band][use_video]\n",
+    "    m_vista[use_vhs] = master_catalogue['m_vhs_' + band][use_vhs]\n",
+    "\n",
+    "    merr_vista = np.full(len(master_catalogue), np.nan)\n",
+    "    merr_vista[use_video] = master_catalogue['merr_video_' + band][use_video]\n",
+    "    merr_vista[use_vhs] = master_catalogue['merr_vhs_' + band][use_vhs]\n",
+    "\n",
+    "    flag_vista = np.full(len(master_catalogue), False, dtype=bool)\n",
+    "    flag_vista[use_video] = master_catalogue['flag_video_' + band][use_video]\n",
+    "    flag_vista[use_vhs] = master_catalogue['flag_vhs_' + band][use_vhs]\n",
+    "\n",
+    "    master_catalogue.add_column(Column(data=f_vista, name=\"f_vista_\" + band))\n",
+    "    master_catalogue.add_column(Column(data=ferr_vista, name=\"ferr_vista_\" + band))\n",
+    "    master_catalogue.add_column(Column(data=m_vista, name=\"m_vista_\" + band))\n",
+    "    master_catalogue.add_column(Column(data=merr_vista, name=\"merr_vista_\" + band))\n",
+    "    master_catalogue.add_column(Column(data=flag_vista, name=\"flag_vista_\" + band))\n",
+    "\n",
+    "    master_catalogue.remove_columns(['f_video_' + band, \n",
+    "                                     'f_vhs_' + band, \n",
+    "                                     'ferr_video_' + band,\n",
+    "                                     'ferr_vhs_' + band, \n",
+    "                                     'm_video_' + band, \n",
+    "                                     'm_vhs_' + band, \n",
+    "                                     'merr_video_' + band,\n",
+    "                                     'merr_vhs_' + band,\n",
+    "                                     'flag_video_' + band, \n",
+    "                                     'flag_vhs_' + band])\n",
+    "\n",
+    "    origin = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
+    "    origin[use_video] = \"VIDEO\"\n",
+    "    origin[use_vhs] = \"VHS\"\n",
+    "    \n",
+    "    vista_origin.add_column(Column(data=origin, name= 'f_vista_' + band ))\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # VISTA Aperture flux\n",
+    "    has_ap_video = ~np.isnan(master_catalogue['f_ap_video_' + band])\n",
+    "    has_ap_vhs = ~np.isnan(master_catalogue['f_ap_vhs_' + band])\n",
+    "    has_ap_both = has_ap_video & has_ap_vhs\n",
+    "\n",
+    "    print(\"{} sources with VIDEO aperture flux\".format(np.sum(has_ap_video)))\n",
+    "    print(\"{} sources with VHS aperture flux\".format(np.sum(has_ap_vhs)))\n",
+    "    print(\"{} sources with VIDEO and VHS aperture flux\".format(np.sum(has_ap_both)))\n",
+    "\n",
+    "\n",
+    "    use_ap_video = has_ap_video \n",
+    "    use_ap_vhs = has_ap_vhs & ~has_ap_both\n",
+    "\n",
+    "    print(\"{} sources for which we use VIDEO aperture fluxes\".format(np.sum(use_ap_video)))\n",
+    "    print(\"{} sources for which we use VHS aperture fluxes\".format(np.sum(use_ap_vhs)))\n",
+    "\n",
+    "    f_ap_vista = np.full(len(master_catalogue), np.nan)\n",
+    "    f_ap_vista[use_ap_video] = master_catalogue['f_ap_video_' + band][use_ap_video]\n",
+    "    f_ap_vista[use_ap_vhs] = master_catalogue['f_ap_vhs_' + band][use_ap_vhs]\n",
+    "\n",
+    "    ferr_ap_vista = np.full(len(master_catalogue), np.nan)\n",
+    "    ferr_ap_vista[use_ap_video] = master_catalogue['ferr_ap_video_' + band][use_ap_video]\n",
+    "    ferr_ap_vista[use_ap_vhs] = master_catalogue['ferr_ap_vhs_' + band][use_ap_vhs]\n",
+    "    \n",
+    "    m_ap_vista = np.full(len(master_catalogue), np.nan)\n",
+    "    m_ap_vista[use_ap_video] = master_catalogue['m_ap_video_' + band][use_ap_video]\n",
+    "    m_ap_vista[use_ap_vhs] = master_catalogue['m_ap_vhs_' + band][use_ap_vhs]\n",
+    "\n",
+    "    merr_ap_vista = np.full(len(master_catalogue), np.nan)\n",
+    "    merr_ap_vista[use_ap_video] = master_catalogue['merr_ap_video_' + band][use_ap_video]\n",
+    "    merr_ap_vista[use_ap_vhs] = master_catalogue['merr_ap_vhs_' + band][use_ap_vhs]\n",
+    "\n",
+    "\n",
+    "    master_catalogue.add_column(Column(data=f_ap_vista, name=\"f_ap_vista_\" + band))\n",
+    "    master_catalogue.add_column(Column(data=ferr_ap_vista, name=\"ferr_ap_vista_\" + band))\n",
+    "    master_catalogue.add_column(Column(data=m_ap_vista, name=\"m_ap_vista_\" + band))\n",
+    "    master_catalogue.add_column(Column(data=merr_vista, name=\"merr_ap_vista_\" + band))\n",
+    "\n",
+    "\n",
+    "    master_catalogue.remove_columns(['f_ap_video_' + band, \n",
+    "                                     'f_ap_vhs_' + band, \n",
+    "                                     'ferr_ap_video_' + band,\n",
+    "                                     'ferr_ap_vhs_' + band,\n",
+    "                                     'm_ap_video_' + band, \n",
+    "                                     'm_ap_vhs_' + band, \n",
+    "                                     'merr_ap_video_' + band,\n",
+    "                                     'merr_ap_vhs_' + band])\n",
+    "\n",
+    "    origin_ap = np.full(len(master_catalogue), '     ', dtype='<U5')\n",
+    "    origin_ap[use_ap_video] = \"VIDEO\"\n",
+    "    origin_ap[use_ap_vhs] = \"VHS\"\n",
+    "    \n",
+    "    vista_origin.add_column(Column(data=origin_ap, name= 'f_ap_vista_' + band ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Z band only in VIDEO\n",
+    "               \n",
+    "master_catalogue['f_ap_video_z'].name = 'f_ap_vista_z'\n",
+    "master_catalogue['ferr_ap_video_z'].name = 'ferr_ap_vista_z'\n",
+    "master_catalogue['f_video_z'].name = 'f_vista_z'\n",
+    "master_catalogue['ferr_video_z'].name = 'ferr_vista_z'\n",
+    "master_catalogue['m_ap_video_z'].name = 'm_ap_vista_z'\n",
+    "master_catalogue['merr_ap_video_z'].name = 'merr_ap_vista_z'\n",
+    "master_catalogue['m_video_z'].name = 'm_vista_z'\n",
+    "master_catalogue['merr_video_z'].name = 'merr_vista_z'\n",
+    "master_catalogue['flag_video_z'].name = 'flag_vista_z'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "vista_origin.write(\"{}/cdfs-swire_vista_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
