XMM-LSS merge running
Still need to choose between CFHT fluxes and HSC wide, deep, udeep. Also astrometry issues with SXDS

--- a/dmu1/dmu1_ml_XMM-LSS/1.16_VISTA-VHS.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.16_VISTA-VHS.ipynb
@@ -15,7 +15,7 @@
     "- The position;\n",
     "- The stellarity;\n",
     "- The magnitude for each band.\n",
-    "- The kron magnitude to be used as total magnitude (no “auto” magnitude is provided).\n",
+    "- The kron magnitude to be used as total magnitude (no “auto” magnitude is provided). These are Vega magnitudes and must be corrected to AB.\n",
     "\n",
     "We don't know when the maps have been observed. We will use the year of the reference paper."
    ]
