--- a/dmu1/dmu1_ml_XMM-LSS/1.17_VISTA-VIDEO.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.17_VISTA-VIDEO.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "There is an old public version of the catalogue but we are using the newer private version in the hope that it will be public by the time we publish the masterlist.\n",
     "\n",
-    "Filters: Y,J,H,Ks \n",
+    "Filters: Z, Y, J, H, Ks \n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
@@ -142,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
@@ -437,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue[RA_COL] =   catalogue[RA_COL] + delta_ra.to(u.deg)\n",
