--- a/dmu1/dmu1_ml_XMM-LSS/1.18_VISTA-VIKING.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.18_VISTA-VIKING.ipynb
@@ -15,7 +15,7 @@
     "- The position;\n",
     "- The stellarity;\n",
     "- The magnitude for each band.\n",
-    "- The kron magnitude to be used as total magnitude (no “auto” magnitude is provided).\n",
+    "- The kron magnitude to be used as total magnitude (no “auto” magnitude is provided). These are Vega magnitudes and must be corrected.\n",
     "\n",
     "We don't know when the maps have been observed. We will use the year of the reference paper."
    ]
@@ -147,13 +147,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Conversion from Vega magnitudes to AB is done using values from \n",
+    "# http://casu.ast.cam.ac.uk/surveys-projects/vista/technical/filter-set\n",
+    "vega_to_ab = {\n",
+    "    \"z\": 0.521,\n",
+    "    \"y\": 0.618,\n",
+    "    \"j\": 0.937,\n",
+    "    \"h\": 1.384,\n",
+    "    \"k\": 1.839\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Adding flux and band-flag columns\n",
+    "# Coverting from Vega to AB and adding flux and band-flag columns\n",
     "for col in catalogue.colnames:\n",
     "    if col.startswith('m_'):\n",
     "        \n",
@@ -161,9 +180,11 @@
     "        \n",
     "        # Some object have a magnitude to 0, we suppose this means missing value\n",
     "        catalogue[col][catalogue[col] <= 0] = np.nan\n",
-    "        catalogue[errcol][catalogue[errcol] <= 0] = np.nan  \n",
+    "        catalogue[errcol][catalogue[errcol] <= 0] = np.nan \n",
     "        \n",
-    "\n",
+    "        # Convert magnitude from Vega to AB\n",
+    "        catalogue[col] += vega_to_ab[col[-1]]\n",
+    "        \n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
     "        # Fluxes are added in µJy\n",
@@ -174,7 +195,7 @@
     "        if \"ap\" not in col:\n",
     "            catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
     "        \n",
-    "# TODO: Set to True the flag columns for fluxes that should not be used for SED fitting."
+    "# TODO: Set to True the flag columns for fluxes that should not be used for SED fitting.\n"
    ]
   },
   {
