--- a/dmu1/dmu1_ml_XMM-LSS/1.14_UKIDSS-UDS.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.14_UKIDSS-UDS.ipynb
@@ -148,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
