XMM-LSS merging: Added CFHT selection. Started HSC selection.

--- a/dmu1/dmu1_ml_XMM-LSS/1.4b_CFHTLS-DEEP.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.4b_CFHTLS-DEEP.ipynb
@@ -152,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
