--- a/dmu1/dmu1_ml_XMM-LSS/1.9c_HSC-UDEEP.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.9c_HSC-UDEEP.ipynb
@@ -2048,7 +2048,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Aperture correction\n",
