HATLAS-SGP running on test square degree
One of the big fields that may be a problem with memory on Vulcain. However, it is fairly shallow without many data sets so may not be a problem

--- a/dmu1/dmu1_ml_XMM-LSS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2_Merging.ipynb
@@ -1711,7 +1711,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "irac_origin.write(\"{}/xmm-lss_irac_i_fluxes_origins{}.fits\".format(OUT_DIR, SUFFIX))"
@@ -2380,7 +2382,9 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Band H is only in UDS so we can simply rename it\n",
