Working on EGS. Halfway through pristine catalogues

--- a/dmu1/dmu1_ml_EGS/1.8_IRAC-EGS.ipynb
+++ b/dmu1/dmu1_ml_EGS/1.8_IRAC-EGS.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ELAIS-N1 master catalogue\n",
-    "## Preparation of Isaac Newton Telescope / Wide Field Camera (INT/WFC) data\n",
+    "# EGS master catalogue\n",
+    "## Preparation of IRAC-EGS data\n",
     "\n",
-    "Isaac Newton Telescope / Wide Field Camera (INT/WFC) catalogue: the catalogue comes from `dmu0_INTWFC`.\n",
+    "IRAC-EGS catalogue: the catalogue comes from `dmu0_IRAC-EGS`.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
