--- a/dmu1/dmu1_ml_XMM-LSS/1.5_CFHTLenS.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.5_CFHTLenS.ipynb
@@ -7,7 +7,7 @@
     "# XMM-LSS master catalogue\n",
     "## Preparation of Canada France Hawaii Telescope Lensing Survey (CFHTLenS) data\n",
     "\n",
-    "Isaac Newton Telescope / Wide Field Camera (INT/WFC) catalogue: the catalogue comes from `dmu0_CFHTLenS`.\n",
+    "CFHTLenS catalogue: the catalogue comes from `dmu0_CFHTLenS`.\n",
     "\n",
     "In the catalogue, we keep:\n",
     "\n",
