Vega to AB on VHS in ELAIS-S1

--- a/dmu1/dmu1_ml_ELAIS-S1/1.2_VISTA-VHS.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/1.2_VISTA-VHS.ipynb
@@ -23,9 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -44,9 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -71,9 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "OUT_DIR =  os.environ.get('TMP_DIR', \"./data_tmp\")\n",
@@ -96,9 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Bands: Y,J,H,K\n",
@@ -138,10 +130,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "# Conversion from Vega magnitudes to AB is done using values from \n",
+    "# http://casu.ast.cam.ac.uk/surveys-projects/vista/technical/filter-set\n",
+    "vega_to_ab = {\n",
+    "    \"z\": 0.521,\n",
+    "    \"y\": 0.618,\n",
+    "    \"j\": 0.937,\n",
+    "    \"h\": 1.384,\n",
+    "    \"k\": 1.839\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -164,7 +173,9 @@
     "        catalogue[col][catalogue[col] <= 0] = np.nan\n",
     "        catalogue[errcol][catalogue[errcol] <= 0] = np.nan  \n",
     "        \n",
-    "\n",
+    "        # Convert magnitude from Vega to AB\n",
+    "        catalogue[col] += vega_to_ab[col[-1]]\n",
+    "        \n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
     "        \n",
     "        # Fluxes are added in µJy\n",
@@ -181,9 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -272,9 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -322,9 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_ELAIS-S1.fits\")\n",
@@ -334,9 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -375,9 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -401,9 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "catalogue[RA_COL] +=  delta_ra.to(u.deg)\n",
@@ -413,9 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -461,9 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "catalogue.add_column(\n",
@@ -474,9 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -510,9 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "catalogue.write(\"{}/VISTA-VHS.fits\".format(OUT_DIR), overwrite=True)"
