EGS runs up to merge
Still to do: choose between cfht bands. Some of the multiwavelength catalogues may have to have more bands added or less. I need some help from someone who understands these surveys. Also, the aperture correction in Legacy survey is suspicious.

--- a/dmu1/dmu1_ml_EGS/1.5_CFHTLenS.ipynb
+++ b/dmu1/dmu1_ml_EGS/1.5_CFHTLenS.ipynb
@@ -189,7 +189,7 @@
     "        catalogue.add_column(Column(np.full(len(catalogue), np.nan), name=\"m_ap{}\".format(col[1:])))\n",
     "        catalogue.add_column(Column(np.full(len(catalogue), np.nan), name=\"merr_ap{}\".format(col[1:])))\n",
     "        catalogue.add_column(Column(np.full(len(catalogue), np.nan), name=\"f_ap{}\".format(col[1:])))\n",
-    "        catalogue.add_column(Column(np.full(len(catalogue), np.nan), name=\"f_err{}\".format(col[1:])))\n",
+    "        catalogue.add_column(Column(np.full(len(catalogue), np.nan), name=\"ferr_ap{}\".format(col[1:])))\n",
     "        \n",
     "        # Band-flag column\n",
     "        if \"ap\" not in col:\n",
