Started Bootes. Tinkering with EGS.

--- a/dmu1/dmu1_ml_EGS/1.11_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_EGS/1.11_LegacySurvey.ipynb
@@ -476,7 +476,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stellarities['g'][np.isclose(stellarities['g'], 1.)] = 0.9\n",
@@ -486,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "orig_legacy.add_column(Column(data=stellarities['g'], name=\"stellarity\")) #Stelarites computed earlier"
@@ -502,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
@@ -791,7 +797,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue[RA_COL].unit = u.deg\n",
