--- a/dmu1/dmu1_ml_ELAIS-S1/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/2_Merging.ipynb
@@ -72,9 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "video = Table.read(\"{}/VISTA-VIDEO.fits\".format(TMP_DIR))\n",
@@ -734,7 +732,17 @@
    "metadata": {},
    "source": [
     "### VI.b VIDEO and VHS\n",
-    "According to MAttia Vacari VIDEO is deeper than VHS so we take the VIDEO flux if both are available"
+    "According to Mattia Vacari VIDEO is deeper than VHS so we take the VIDEO flux if both are available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "master_catalogue.write(\"{}/master_catalogue_temp_elais-s1{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
+    "#master_catalogue= Table.read(\"{}/master_catalogue_temp_elais-s1{}.fits\".format(OUT_DIR, SUFFIX))"
    ]
   },
   {
@@ -925,9 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "vista_stats.show_in_notebook()\n"
@@ -966,10 +972,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "video_moc = MOC(filename=\"../../dmu0/dmu0_VISTA-VIDEO-private/data/VIDEO-all_2016-04-14_fullcat_errfix_ELAIS-S1_MOC.fits\")\n",
+    "video_moc = MOC(filename=\"../../dmu0/dmu0_VISTA-VIDEO-private/data/VIDEO-all_2017-02-12_fullcat_errfix_ELAIS-S1_MOC.fits\")\n",
     "vhs_moc = MOC(filename=\"../../dmu0/dmu0_VISTA-VHS/data/VHS_ELAIS-S1_MOC.fits\")\n",
     "voice_moc = MOC(filename=\"../../dmu0/dmu0_ESIS-VOICE/data/esis_b2vr_cat_03_HELP-coverage_MOC.fits\")\n",
     "servs_moc = MOC(filename=\"../../dmu0/dmu0_DataFusion-Spitzer/data/DF-SERVS_ELAIS-S1_MOC.fits\")\n",
@@ -979,7 +987,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "was_observed_optical = inMoc(\n",
@@ -1000,7 +1010,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue.add_column(\n",
@@ -1032,9 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# SpARCS is a catalogue of sources detected in r (with fluxes measured at \n",
@@ -1046,10 +1056,9 @@
     ")\n",
     "\n",
     "nb_nir_flux = (\n",
-    "    1 * ~np.isnan(master_catalogue['f_vhs_j']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vhs_k']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_video_j']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_video_k'])\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_j']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_k']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_k']) \n",
     ")\n",
     "\n",
     "nb_mir_flux = (\n",
@@ -1089,7 +1098,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue['help_id', \n",
@@ -1119,7 +1130,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue.add_column(Column(\n",
@@ -1169,7 +1182,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue[columns].write(\"{}/master_catalogue_elais-s1{}.fits\".format(OUT_DIR, SUFFIX))"
