--- a/dmu1/dmu1_ml_EGS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_EGS/2_Merging.ipynb
@@ -72,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aegis = Table.read(\"{}/AEGIS.fits\".format(TMP_DIR))\n",
@@ -296,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
@@ -356,7 +360,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Given the graph above, we use 0.8 arc-second radius\n",
@@ -626,7 +632,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "specz =  Table.read(\"../../dmu23/dmu23_EGS/data/EGS-specz-v2.1.csv\")\n",
@@ -651,7 +659,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "master_catalogue = specz_merge(master_catalogue, specz, radius=1. * u.arcsec)"
@@ -695,7 +705,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aegis_moc =  MOC(filename=\"../../dmu0/dmu0_AEGIS/data/EGS_Palomar_20160804_MOC.fits\")\n",
@@ -771,7 +783,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# SpARCS is a catalogue of sources detected in r (with fluxes measured at \n",
@@ -895,13 +909,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "master_catalogue[id_names].write(\n",
-    "    \"{}/master_list_cross_ident_egs{}.fits\".format(OUT_DIR, SUFFIX))\n",
+    "    \"{}/master_list_cross_ident_egs{}.fits\".format(OUT_DIR, SUFFIX), overwrite=True)\n",
     "id_names.remove('help_id')\n",
     "master_catalogue.remove_columns(id_names)"
    ]
