--- a/dmu1/dmu1_ml_HDF-N/1.4_Ultradeep-Ks-GOODS-N.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/1.4_Ultradeep-Ks-GOODS-N.ipynb
@@ -98,7 +98,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
@@ -131,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
@@ -367,7 +371,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue[RA_COL] = catalogue[RA_COL] + delta_ra.to(u.deg)\n",
