--- a/dmu1/dmu1_ml_HDF-N/1.6_CANDELS-GOODS-N.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/1.6_CANDELS-GOODS-N.ipynb
@@ -100,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
