Fixing Legacy Survey units across HELP and adding LS to NGP

--- a/dmu1/dmu1_ml_xFLS/1.5_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_xFLS/1.5_LegacySurvey.ipynb
@@ -586,6 +586,8 @@
     "        catalogue[errcol].unit = u.microjansky\n",
     "        \n",
     "        mag, magerror = flux_to_mag(np.array(catalogue[col])* 1.e-6, np.array(catalogue[errcol])* 1.e-6)\n",
+    "        mag[mag == np.inf] = np.nan #The very low fluxes yield infinite mags\n",
+    "        magerror[magerror == np.inf] = np.nan\n",
     "        \n",
     "        if 'ap' in col:\n",
     "            mag += mag_corr[col[-1]]\n",
